# data_email_client

./: .gitignore  README.md  pyproject.toml  setup.py
data_email_client/: __init__.py  data_email_client.py  data_email_gui.py  email_client.py  log.py
data_email_client/common/: log.py  models.py  utils.py
email_client/: email_client.py
